# Linux-Socket

./: .gitignore  CMakeLists.txt  README.md
IPC/: demo.cpp  do
combine-fork-and-exec/: build.sh  example.c  hello.c
exec-call/: example.c  hello.c
fork/: fork_return_value.cpp
pipe/: demo.cpp
scripts/awk/: pre_post_proc
scripts/bash/: mk_dir.sh
shared-memory/: demo.cpp  demo1.cpp  do
src/: CMakeLists.txt  client.hpp  server.cpp  server.hpp  socket.cpp
src/basic/: CMakeLists.txt  af_inet.cpp  af_unix.cpp  af_unix2.cpp  clientServer.cpp  createSocket.cpp  epoll.c  process_thread.cpp  socketPair.cpp
src/wheels/: tcp.cpp
test/: CMakeLists.txt  clientTest.cpp  serverTest.cpp
tlpi/: CMakeLists.txt
tlpi/altio/: CMakeLists.txt  self_pipe.c
tlpi/lib/: CMakeLists.txt  error_functions.c  error_functions.h  get_num.c  get_num.h  tlpi_hdr.h
tlpi/memalloc/: CMakeLists.txt  free_and_sbrk.c
tlpi/mmap/: CMakeLists.txt  mmcat.c  t_mmap.c
tlpi/signals/: CMakeLists.txt  intquit.c  kill_1.c  kill_2.cpp  ouch.c  t_sigqueue.c
tlpi/svipc/: CMakeLists.txt  svmsg_demo_server.c
tlpi/svmsg/: CMakeLists.txt  svmsg_create.c  svmsg_receive.c  svmsg_send.c
tlpi/svshm/: svshm_xfr.h  svshm_xfr_writer.c
wait-call/: demo.cpp
write-call/: demo.c  demo1.c
